# smart-to-do-api

./: .env  API_DOCUMENTATION.md  README.md  blueprint.md  goal.md  learning_outcomes.md  main.py  postman_collection.json  pyproject.toml  requirements.txt
api/: deps.py
api/v1/: api.py
api/v1/endpoints/: auth.py  tasks.py
core/: config.py  security.py  utils.py
db/: mongodb.py
models/: task.py  user.py
schemas/: task.py  token.py  user.py
templates/: index.html  index_jinja.html
tests/: conftest.py  test_auth.py  test_tasks.py
